syntax = "proto3";

service TrustedRuntime {
  rpc HandleUserRequest(UserRequest) returns (UserRequestResponse) {}
  rpc Initialize(Initialization) returns (Empty) {}
  // Replaces the existing lookup data with the new value.
  rpc UpdateLookupData(LookupData) returns (Empty) {}
}

message UserRequest {
  bytes session_id = 1;
  bytes body = 2;
}

message UserRequestResponse {
  bytes body = 1;
}

message Initialization {
  bytes wasm_module = 1;
  uint32 constant_response_size = 2;
}

message LookupDataEntry {
  bytes key = 1;
  bytes value = 2;
}

message LookupData {
  repeated LookupDataEntry items = 1;
}

message Empty {}
